# speedcc

./: flake.nix  speedcc.cabal
app/: Main.hs
examples/: return_2.s
src/: AST.hs  Codegen.hs  Lexer.hs  Parser.hs
